Fix T73727: Invalid event.type for Gizmo.modal callback